[Landing] Fixes from Laure

--- a/web/landing/index.html
+++ b/web/landing/index.html
@@ -293,7 +293,7 @@
                                 d'un SAMU vers ses partenaires.
                                 En s'appuyant sur les Logiciels de Régulation Médicale (LRM), qui participent à la
                                 co-construction du Hub, elle permet
-                                donc les liens suivants :​</p>
+                                donc les liens suivants :</p>
                         </div>
                     </div>
                     <div class="o-paragraph--columns__cards row col--eq-height mt-4">
@@ -304,7 +304,7 @@
                                     <img src="/img/resize/Image Nexis_RC.png" alt="" loading="lazy">
                                 </div>
                                 <h3 class="m-card__title h4">15-18</h3>
-                                <p class="mb-lg-1">avec NexSIS (système national de gestion des alertes des SDIS​)</p>
+                                <p class="mb-lg-1">avec NexSIS (système national de gestion des alertes des SDIS)</p>
                             </a>
                         </div>
                         <div class="mb-3 col-sm-6 col-lg-3">
@@ -352,7 +352,7 @@
                         <div class="mb-3 col-sm-6 col-lg-4 px-md-4">
                             <div class="m-card bg-gray-300 rounded-md top-left-radius-0">
                                 <p><b>Automatiser</b> le partage et la <b>synchronisation d'information</b> avec un
-                                    autre acteur de l'écosystème du SAMU​.
+                                    autre acteur de l'écosystème du SAMU.
                                 </p>
                             </div>
                         </div>
@@ -397,7 +397,7 @@
                             <div class="wysiwyg">
                                 <ul>
                                     <li>Une architecture nationale résiliente et sécurisée qui permet une continuité des
-                                        échanges en cas de panne ou de redémarrage d'un logiciel connecté​</li>
+                                        échanges en cas de panne ou de redémarrage d'un logiciel connecté.</li>
                                 </ul>
                             </div>
                         </div>
@@ -413,15 +413,15 @@
                             <h3>Standardisation, interopérabilité, réversibilité </h3>
                             <div class="wysiwyg">
                                 <ul>
-                                    <li>Le SAMU reste maître de ses données et de leur partage.​</li>
+                                    <li>Le SAMU reste maître de ses données et de leur partage.</li>
                                     <li>Standardisation au niveau national du transfert d'information entre les SAMU et
-                                        leurs partenaires.​</li>
-                                    <li>Possibilité d'interconnecter le LRM avec tout type de logiciels actuels et
-                                        futurs. ​</li>
-                                    <li>Synchronisation automatique des données dans le LRM. ​</li>
+                                        leurs partenaires.</li>
+                                    <li>Possibilité d'interconnecter le LRM avec tous types de logiciels actuels et
+                                        futurs. </li>
+                                    <li>Synchronisation automatique des données dans le LRM. </li>
                                     <li>Fédération des éditeurs de LRM autour d’un langage commun permettant aux SAMU de
-                                        choisir la solution qui leur convient le plus tout en lui garantissant le
-                                        dialogue avec des solutions différentes.​</li>
+                                        choisir la solution qui leur convient le plus tout en leur garantissant le
+                                        dialogue avec des solutions différentes.</li>
                                 </ul>
                             </div>
                         </div>
@@ -436,9 +436,9 @@
                             <h3>Efficacité </h3>
                             <div class="wysiwyg">
                                 <ul>
-                                    <li>Fin de la double saisie des informations.​</li>
-                                    <li>Pas de perte ou de modification de l'information pendant les échanges.​</li>
-                                    <li>Réduction des appels et du temps d'attente.​</li>
+                                    <li>Fin de la double saisie des informations.</li>
+                                    <li>Pas de perte ou de modification de l'information pendant les échanges.</li>
+                                    <li>Réduction des appels et du temps d'attente.</li>
                                 </ul>
                             </div>
                         </div>
