--- a/web/landing/pages/15-15.html
+++ b/web/landing/pages/15-15.html
@@ -260,7 +260,7 @@
                     
                     <div class="container paragraph-title-text text-center text-default">
                     <h3>Les travaux 15-15 venant de débuter, les liens disponibles ci-dessous mènent à des ressources incluant uniquement le périmètre 15-18 pour l'instant. 
-                        Elles sont amenées à évoluer pour s'adapter au périmètre 15-15 au fur et à mesure de la publication des travaux, et seront alors mises à jour
+                        Elles sont amenées à évoluer pour s'adapter au périmètre 15-15 au fur et à mesure de la publication des travaux, et seront alors mises à jour.
                          </h3></div>
 
                     <div class="wysiwyg text-left mt-4 mb-4">
@@ -269,10 +269,10 @@
                         </p>
                         <li>Le JSON Schema Viewer (JSV) vous permet de visualiser de façon interactive le json schema.
                         </li>
-                        <li>Le site de spécification vous permet de visualiser les messages qui peuvent être reçus ou
+                        <li>Le site de spécifications vous permet de visualiser les messages qui peuvent être reçus ou
                             envoyés. </li>
                         <li>Le LRM de test simule les interactions d’un LRM avec et le Hub et vous permet de tester vos
-                            développements</li>
+                            développements.</li>
 
 
 
@@ -283,7 +283,7 @@
                         target="_blank">JSV</a>
                     <a href="https://hub.esante.gouv.fr/specs/" class="btn btn--style1 btn--white mt-1"
                         target="_blank">Site de
-                        spécification</a>
+                        spécifications</a>
                     <a href="https://hub.esante.gouv.fr/lrm/" class="btn btn--style1 btn--white mt-1" target="_blank">
                         LRM de test </a>
                 </div>
