--- a/web/landing/pages/travaux.html
+++ b/web/landing/pages/travaux.html
@@ -283,10 +283,10 @@
                             <div class="wysiwyg">
                                 <h3>Les pilotes</h3>
                                 <ul>
-                                    <li>NexSIS - SAMU 79 (Appligos)</li>
-                                    <li>NexSIS - SAMU 09 (Bisom)</li>
-                                    <li>NexSIS - SAMU 50 ou 76B (RRAMU)</li>
+                                    <li>NexSIS - SAMU 09 (BISOM)</li>
                                     <li>NexSIS - SAMU 44 (Inetum)</li>
+                                    <li>NexSIS - SAMU 50 (RRAMU)</li>
+                                    <li>NexSIS - SAMU 78 (Appligos)</li>
                                     <li>NexSIS - SAMU 95 (Scriptal)</li>
                                 </ul>
                             </div>
@@ -312,7 +312,7 @@
                                 <li>Améliorer la coopération des SAMU, fluidifier et simplifier leurs échanges en
                                     facilitant l’interopérabilité des LRM.
                                 </li>
-                                <li>Gagner en efficacité, réduire les temps d’attente et les risques d’erreur lors des
+                                <li>Gagner en efficacité, réduire les temps d’attente et les risques d’erreurs lors des
                                     traitements des appels d’urgence.
                                 </li>
                                 <li>Améliorer la réversibilité des marchés publics et permettre aux SAMU de choisir la
@@ -331,13 +331,13 @@
                             <div class="wysiwyg">
                                 <h3>Les pilotes</h3>
                                 <ul>
-                                    <li>SAMU 59 (Appligos), 62 (Inetum), 76B (RRAMU) et 80 (Exos)
+                                    <li>SAMU 59 (Appligos), 62 (Inetum), 76A (RRAMU) et 80 (Exos)
                                     </li>
-                                    <li>SAMU 78 (Appligos), et 95 (Scriptal)
+                                    <li>SAMU 78 (Appligos) et 95 (Scriptal)
                                     </li>
                                     <li>SAMU 35 (Inetum) et 56 (Inetum)
                                     </li>
-                                    <li>SAMU 09 (Bisom)
+                                    <li>SAMU 09 (BISOM)
                                     </li>
                                 </ul>
                             </div>
