--- a/web/landing/pages/15-18.html
+++ b/web/landing/pages/15-18.html
@@ -264,10 +264,10 @@
                         </p>
                         <li>Le JSON Schema Viewer (JSV) vous permet de visualiser de façon interactive le json schema.
                         </li>
-                        <li>Le site de spécification vous permet de visualiser les messages qui peuvent être reçus ou
+                        <li>Le site de spécifications vous permet de visualiser les messages qui peuvent être reçus ou
                             envoyés. </li>
-                        <li>Le LRM de test simule les interactions d’un LRM avec et le Hub et vous permet de tester vos
-                            développements</li>
+                        <li>Le LRM de test simule les interactions d’un LRM avec le Hub et vous permet de tester vos
+                            développements.</li>
 
 
 
@@ -277,7 +277,7 @@
                     <a href="https://hub.esante.gouv.fr/jsv/" class="btn btn--style1 btn--white mt-1"
                         target="_blank">JSV</a>
                     <a href="https://hub.esante.gouv.fr/specs/" class="btn btn--style1 btn--white mt-1"
-                        target="_blank">Site de spécification</a>
+                        target="_blank">Site de spécifications</a>
                     <a href="https://hub.esante.gouv.fr/lrm/" class="btn btn--style1 btn--white mt-1" target="_blank">
                         LRM de test </a>
                 </div>
