--- a/web/landing/pages/contacts.html
+++ b/web/landing/pages/contacts.html
@@ -295,7 +295,7 @@
                         <div class="col-md-8">
                             <h2>Remplissez le formulaire </h2>
                             <div class="wysiwyg mb-3">
-                                <p>Pour nous faire part de vos retours, vous pouvez aussi nous contactez via notre
+                                <p>Pour nous faire part de vos retours, vous pouvez aussi nous contacter via notre
                                     formulaire en ligne. </p>
                             </div>
                             <div class="paragraph--lien">
