Minor tweaks + webinaire

--- a/web/landing/pages/15-18.html
+++ b/web/landing/pages/15-18.html
@@ -294,7 +294,7 @@
                 </div>
                 <div class="paragraph__header row justify-content-center">
                     <div class="col-md-10 col-lg-8 text-center mt-2">
-                        <h3>Périmètre technique</h3>
+                        <h3 id="technique">Périmètre technique</h3>
                     </div>
                 </div>
                 <div class="o-paragraph--files row col--eq-height mt-4 ">
@@ -336,7 +336,7 @@
                 </div>
                 <div class="paragraph__header row justify-content-center">
                     <div class="col-md-10 col-lg-8 text-center mt-2">
-                        <h3>Périmètre fonctionnel</h3>
+                        <h3 id="fonctionnel">Périmètre fonctionnel</h3>
                     </div>
                 </div>
                 <div class="o-paragraph--files row col--eq-height mt-4 ">
@@ -378,7 +378,7 @@
                 </div>
                 <div class="paragraph__header row justify-content-center">
                     <div class="col-md-10 col-lg-8 text-center mt-2">
-                        <h3>Projectathon</h3>
+                        <h3 id="projectathon">Projectathon</h3>
                     </div>
                 </div>
                 <div class="o-paragraph--files row col--eq-height mt-4 ">
