--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -329,6 +329,64 @@
             </div>
 
             <!-- Webinaires en replay -->
+
+            <div class="paragraph-space o-paragraph--text-media__wrapper">
+                <div class="container">
+                    <div class="o-paragraph--text-media__slider">
+                        <div class="o-paragraph--text-media__item">
+                            <div class="o-paragraph--text-media rightVisual">
+                                <div class="row align-items-center">
+                                    <div class="col-md mb-3 mb-md-0">
+                                        <div class="o-paragraph--text-media__content pt-3">
+                                            <h2>Projectathon éditeurs #1</h2>
+                                            <h4>18-19 septembre 2023</h4>
+                                            <div class="wysiwyg mb-3">
+                                                <p>Principalement orientée pour les équipes internes du programme
+                                                    SI-SAMU ainsi que nos partenaires métiers et ARS, cette première
+                                                    démonstration du Hub Santé est constituée d'une présentation globale
+                                                    du projet et d'une démonstration technique de la plateforme.</p>
+                                            </div>
+
+                                            <div class="paragraph--lien">
+                                                <div class="row align-items-center">
+                                                    <div class="col-md mb-3">
+                                                        <a href="https://youtu.be/a23luh3as8Y"
+                                                            class="btn btn--style1 btn--white" target="_blank">Visionner
+                                                        </a>
+                                                    </div>
+
+                                                    <div class="col-md mb-3">
+                                                        <a href="/resources/projectathon/23.09.18 - Hub Santé - Projectathon.pdf"
+                                                            class="btn btn--style1 btn--white" target="_blank">Slides
+                                                        </a>
+                                                    </div>
+
+                                                    <div class="col-md mb-3">
+                                                        <a href="/articles/20230920_retour_projectathon.html"
+                                                            class="btn btn--style1 btn--white">Article</a>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md o-paragraph--text-media__media_column">
+                                        <div class="o-paragraph--text-media__media rounded-md top-left-radius-0">
+                                            <div class="o-paragraph--text-media__clip">
+                                                <a href="https://youtu.be/a23luh3as8Y" target="_blank">
+                                                    <img src="/img/crea/Image webinaire 1 finale.png" alt="" width="585"
+                                                        height="329" loading="lazy">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
             <div class="paragraph-space o-paragraph--text-media__wrapper">
                 <div class="container">
                     <div class="o-paragraph--text-media__slider">
@@ -336,8 +394,9 @@
                             <div class="o-paragraph--text-media leftVisual">
                                 <div class="row align-items-center">
                                     <div class="col-md mb-3 mb-md-0">
-                                        <div class="o-paragraph--text-media__content">
-                                            <h2>Kick-off métier des pilotes - Jeudi 14 septembre 2023</h2>
+                                        <div class="o-paragraph--text-media__content pt-3">
+                                            <h2>Kick-off métier des pilotes</h2>
+                                            <h4>Jeudi 14 septembre 2023</h4>
                                             <div class="wysiwyg mb-3">
                                                 <p>Une première réunion de lancement du Hub Santé avec les SAMU pilotes
                                                     et leurs ARS.
@@ -349,14 +408,14 @@
 
                                             <div class="paragraph--lien">
                                                 <div class="row align-items-center">
-                                                    <div class="col-md mb-3 mb-md-0">
+                                                    <div class="col-md mb-3">
                                                         <a href="https://youtu.be/8ZDP7WGdXcg"
                                                             class="btn btn--style1 btn--white" target="_blank">Visionner
                                                         </a>
                                                     </div>
 
 
-                                                    <div class="paragraph--lien">
+                                                    <div class="col-auto mb-3">
                                                         <a href="/resources/23.09.14 - Hub Sante - Kick off pilotes.pdf"
                                                             class="btn btn--style1 btn--white" target="_blank">Slides
                                                             Kick-off (pdf - 4.7Mo)</a>
@@ -392,8 +451,9 @@
                             <div class="o-paragraph--text-media rightVisual">
                                 <div class="row align-items-center">
                                     <div class="col-md mb-3 mb-md-0">
-                                        <div class="o-paragraph--text-media__content">
-                                            <h2>Démonstration #1 - Lundi 5 juin 2023 </h2>
+                                        <div class="o-paragraph--text-media__content pt-3">
+                                            <h2>Démonstration #1</h2>
+                                            <h4>Lundi 5 juin 2023 </h4>
                                             <div class="wysiwyg mb-3">
                                                 <p>Principalement orientée pour les équipes internes du programme
                                                     SI-SAMU ainsi que nos partenaires métiers et ARS, cette première
@@ -403,13 +463,13 @@
 
                                             <div class="paragraph--lien">
                                                 <div class="row align-items-center">
-                                                    <div class="col-md mb-3 mb-md-0">
+                                                    <div class="col-md mb-3">
                                                         <a href="https://youtu.be/8Z4PShefKYg"
                                                             class="btn btn--style1 btn--white" target="_blank">Visionner
                                                         </a>
                                                     </div>
 
-                                                    <div class="paragraph--lien">
+                                                    <div class="col-auto mb-3">
                                                         <a href="/resources/23.06 Démo Hub Sante - ANS et partenaires.pdf"
                                                             class="btn btn--style1 btn--white" target="_blank">Slides
                                                             Démo #1 (pdf - 2.5Mo)</a>
