fixing date article

--- a/web/landing/pages/actualites.html
+++ b/web/landing/pages/actualites.html
@@ -363,7 +363,7 @@
                                                     class="m-teaser__type rounded-lg mt-2 ml-2 mb-0 text-uppercase bg-default text-white">
                                                     Actualité</p>
 
-                                                <p class="m-teaser__date mb-1 fw-semiBold">20 Aout 2021</p>
+                                                <p class="m-teaser__date mb-1 fw-semiBold">15 septembre 2023</p>
                                             </div>
                                             <div class="wysiwyg mb-2">
 
@@ -395,7 +395,7 @@
                                                     class="m-teaser__type rounded-lg mt-2 ml-2 mb-0 text-uppercase bg-default text-white">
                                                     Communiqué de presse </p>
 
-                                                <p class="m-teaser__date mb-1 fw-semiBold ">09 juin 2023
+                                                <p class="m-teaser__date mb-1 fw-semiBold ">9 juin 2023
                                                 </p>
                                             </div>
                                             <div class="wysiwyg mb-2">
