--- a/web/landing/pages/actualites.html
+++ b/web/landing/pages/actualites.html
@@ -222,11 +222,9 @@
                                         <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                     </svg></a></li>
                             <li class="breadcrumb-item"><a href="#">Le Hub Santé <svg class="svg-icon svg-angle-right"
-                            <li class="breadcrumb-item"><a href="#">Le Hub Santé <svg class="svg-icon svg-angle-right"
                                         aria-hidden="true" focusable="false">
                                         <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                     </svg></a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Actualités</li>
                             <li class="breadcrumb-item active" aria-current="page">Actualités</li>
                         </ol>
                     </nav>
@@ -254,11 +252,9 @@
             </div>
 
             <!-- Bandeau gris -->
-            <!-- Bandeau gris -->
             <div class="bg-default py-2 text-white text-center mt-2 mb-2">
                 <h3>Consultez le calendrier des évènements du Hub :
                 </h3>
-
 
                 <div class="container" style="display: flex; justify-content: space-around;">
                     <a href="/pages/webinaires.html" class="btn btn--style1 btn--white">Prochains évènements </a>
@@ -297,42 +293,8 @@
                                 <img src="/img/resize/Bandeau_webinaires_ordinateur.jpg" alt="" width="422" height="390"
                                     loading="lazy">
 
-                <!-- Bannière Webinaires -->
-                <!-- SVG pour les formes/pétales. A ajouter seulement une fois dans la page -->
-                <svg class="d-block" aria-hidden="true" focusable="false" height="0" width="0">
-                    <defs>
-                        <clipPath id="mask-mise-en-avant" clipPathUnits="objectBoundingBox">
-                            <path
-                                d="M1,0.5 L1,0.5 C1,0.776,0.793,1,0.538,1 L0,1 C0.04,0.961,0.074,0.882,0.077,0.723 L0.077,0.5 C0.077,0.224,0.283,0,0.538,0 C0.793,0,1,0.224,1,0.5" />
-                        </clipPath>
-                    </defs>
-                </svg>
-                <div class="py-2">
-                    <div class="container paragraph-space">
-                        <div class="o-paragraph--image-texte-cta leftVisual">
-                            <div
-                                class="o-paragraph--image-texte-cta__content bg-white rounded-lg top-left-radius-0 shadow-lg">
-                                <h2>Webinaires</h2>
-                                <div class="wysiwyg mb-3">
-                                    <p>Retrouvez tous les webinaires du Hub, pour vous accompagner dans vos
-                                        développements
-                                        et répondre à vos questions.
-                                    </p>
-                                </div>
-                                <div class="paragraph--lien">
-                                    <a href="/pages/webinaires.html" class="btn btn--style1 btn--white">Visionnez</a>
-                                </div>
-                            </div>
-                            <div class="o-paragraph--image-texte-cta__img d-none d-md-block">
-                                <img src="/img/resize/Bandeau_webinaires_ordinateur.jpg" alt="" width="422" height="390"
-                                    loading="lazy">
 
 
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
                             </div>
                         </div>
                     </div>
@@ -346,47 +308,9 @@
                                 <h2>Toute l'actualité</h2>
                             </div>
                         </div>
-                <!-- Bannière toute l'actualité -->
-                <div class="bg-gray-200 paragraph-space o-paragraph--mixed-push mt-6">
-                    <div class="container">
-                        <div class="paragraph__header row">
-                            <div class="col-8 col-sm-9 col-md-10 col-lg-8">
-                                <h2>Toute l'actualité</h2>
-                            </div>
-                        </div>
 
-                    <div class="o-paragraph--mixed-push__teasers mt-4">
-                        <div class="o-paragraph--mixed-push__slider col--eq-height">
-
-                            <article class="m-teaser m-teaser--news mb-3 col--eq-height">
-                                <a href="/articles/20230920_retour_projectathon.html" class="bg-white border rounded-md top-left-radius-0" target="_blank">
-                                    <div class="m-teaser__img">
-
-
-                                        <img src="/img/resize/IMG_Developpement des SI_resize baniere page daccueil.jpeg" alt="" width="378" height="213"
-                                            loading="lazy">
-
-
-
-
-                                        </div>
-
-                                    <div class="m-teaser__content">
-                                        <h3 class="m-teaser__title h4 mb-1">Retour sur le Projectathon n°1 du Hub des 18 et 19 septembre</h3>
-                                        <div class="m-teaser__info d-flex flex-wrap align-items-center order-first">
-                                            <p
-                                            class="m-teaser__type rounded-lg mt-2 ml-2 mb-0 text-uppercase bg-brand-2 text-white">
-                                                Actualité </p>
-
-                                            <p class="m-teaser__date mb-1 fw-semiBold ">20 septembre 2023
-                                            </p>
-                                        </div>
-                                        <div class="wysiwyg mb-2">
-                                            
-                                        </div>
-                                    </div>
-                                </a>
-                            </article>
+                        <div class="o-paragraph--mixed-push__teasers mt-4">
+                            <div class="o-paragraph--mixed-push__slider col--eq-height">
 
                                 <article class="m-teaser m-teaser--news mb-3 col--eq-height">
                                     <a href="/articles/20230920_retour_projectathon.html"
@@ -397,14 +321,18 @@
                                             <img src="/img/resize/IMG_Developpement des SI_resize baniere page daccueil.jpeg"
                                                 alt="" width="378" height="213" loading="lazy">
 
+
+
+
                                         </div>
 
-                                    <div class="m-teaser__content">
-                                        <h3 class="m-teaser__title h4 mb-1">Lancement du site Internet du Hub Santé </h3>
-                                        <div class="m-teaser__info d-flex flex-wrap align-items-center order-first">
-                                            <p
-                                                class="m-teaser__type rounded-lg mt-2 ml-2 mb-0 text-uppercase bg-default text-white">
-                                               Actualité</p>
+                                        <div class="m-teaser__content">
+                                            <h3 class="m-teaser__title h4 mb-1">Retour sur le Projectathon n°1 du Hub
+                                                des 18 et 19 septembre</h3>
+                                            <div class="m-teaser__info d-flex flex-wrap align-items-center order-first">
+                                                <p
+                                                    class="m-teaser__type rounded-lg mt-2 ml-2 mb-0 text-uppercase bg-brand-2 text-white">
+                                                    Actualité </p>
 
                                                 <p class="m-teaser__date mb-1 fw-semiBold ">20 septembre 2023
                                                 </p>
@@ -477,10 +405,10 @@
                                     </a>
                                 </article>
 
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
         </main>
     </div>
@@ -631,21 +559,13 @@
                             Mentions légales</a>
                     </li>
 
-
                     <li class="footer-list__item">
                         <a href="/pages-footer/donnees_personnelles.html">
                             Politique de protection des données personnelles </a>
                     </li>
 
                     <li class="footer-list__item">
-                    </li>
-
-                    <li class="footer-list__item">
                         <a href="/pages-footer/plan_de_site.html">Plan de site </a>
-                    </li>
-
-
-
                     </li>
 
 
