--- a/web/landing/pages/15-15.html
+++ b/web/landing/pages/15-15.html
@@ -306,7 +306,7 @@
             </a>
         </div>
         <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3">
-            <a href="/resources/23.07 DST v1.1 - Hub Sante & connecteurs.pdf"
+            <a href="/resources/tech/23.09 DST v1.2 - Hub Santé & connecteurs.pdf"
                 class="m-file bg-gray-300 rounded-sm top-left-radius-0" target="_blank">
                 <p class="m-file__title h4 mb-1">Dossier des Spécifications Techniques </p>
                 <p class="m-file__info text-primary mb-0">Version 1.1 - 2.8 Mo</p>
