Updating landing for Octobre

--- a/web/landing/pages-footer/plan_de_site.html
+++ b/web/landing/pages-footer/plan_de_site.html
@@ -339,7 +339,12 @@
                         <a href="/pages-footer/mentions_legales.html">
                             Mentions légales</a>
                     </li>
-               
+                    
+                    <li class="footer-list__item">
+                        <a href="/pages-footer/declaration_accessibilite.html">
+                            Accessibilité</a>
+                    </li>
+
                     <li class="footer-list__item">
                         <a href="/pages-footer/donnees_personnelles.html">
                             Politique de protection des données personnelles </a>
