--- a/web/landing/index.html
+++ b/web/landing/index.html
@@ -589,7 +589,12 @@
                         <a href="/pages-footer/mentions_legales.html">
                             Mentions légales</a>
                     </li>
-               
+                    
+                    <li class="footer-list__item">
+                        <a href="/pages-footer/declaration_accessibilite.html">
+                            Accessibilité</a>
+                    </li>
+
                     <li class="footer-list__item">
                         <a href="/pages-footer/donnees_personnelles.html">
                             Politique de protection des données personnelles </a>
