--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -284,7 +284,7 @@
                             <p class="m-file__title h4 text-white"> Lundi 13 & Mardi 14 novembre 2023 de 9h30 à 18h.
                             </p>
                             <p>Après un premier Projectathon réussi à la rentrée de septembre, nous organisons le second - toujours en distanciel
-                                -  les lundi 13 et mardi 14 novembre. Le but est de poursuivre les travaux lancés sur le périmètre 15-18,
+                                - les lundi 13 et mardi 14 novembre. Le but est de poursuivre les travaux lancés sur le périmètre 15-18,
                                 notamment avec la simulation d'envoi et de réception de messages via le Hub.   </p>
                             <p>Le Projectathon commencera par une brève réunion de lancement :
                                 point de situation des travaux, présentation de l'organisation, des ressources disponibles et différents paliers validables.</p>
@@ -356,7 +356,7 @@
                                                     </div>
 
                                                     <div class="col-md mb-3">
-                                                        <a href="/resources/projectathon/23.09.18 - Hub Santé - Projectathon.pdf"
+                                                        <a href="/resources/projectathon/23.09.18 - Hub Santé - Projectathon.pdf"
                                                             class="btn btn--style1 btn--white" target="_blank">Slides
                                                         </a>
                                                     </div>
