Mise à jour pour projectathon

--- a/web/landing/old_site.html
+++ b/web/landing/old_site.html
@@ -284,7 +284,7 @@
                                     style="margin-bottom: 10px;" target="_blank">
                                     Replay
                                 </a>
-                                <a href="resources/23.06%20Démo%20Hub%20Santé%20-%20ANS%20et%20partenaires.pdf"
+                                <a href="/resources/23.06 Demo Hub Sante - ANS et partenaires.pdf"
                                     class="btn btn--style1 btn--white" target="_blank">
                                     Slides (pdf - 2.52Mo)
                                 </a>
