--- a/web/landing/pages/travaux.html
+++ b/web/landing/pages/travaux.html
@@ -335,7 +335,7 @@
                                     </li>
                                     <li>SAMU 78 (Appligos) et 95 (Scriptal)
                                     </li>
-                                    <li>SAMU 35 (Inetum) et 56 (Inetum)
+                                    <li>SAMU 35 (Inetum) 44 (Inetum) et 50 (RRAMU)
                                     </li>
                                     <li>SAMU 09 (BISOM)
                                     </li>
