--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -354,17 +354,17 @@
                                                             class="btn btn--style1 btn--white" target="_blank">Visionner
                                                         </a>
                                                     </div>
-
-                                                    <div class="col-md mb-3">
-                                                        <a href="/resources/projectathon/23.09.18 - Hub Santé - Projectathon.pdf"
-                                                            class="btn btn--style1 btn--white" target="_blank">Slides
-                                                        </a>
-                                                    </div>
-
                                                     <div class="col-md mb-3">
                                                         <a href="/articles/20230920_retour_projectathon.html"
                                                             class="btn btn--style1 btn--white">Article</a>
                                                     </div>
+                                                    <div class="col-md mb-3">
+                                                        <a href="/resources/projectathon/23.09.18 - Hub Sante - Projectathon 1.pdf"
+                                                            class="btn btn--style1 btn--white" target="_blank">Slides Projectathon #1 (pdf - 2.5Mo)
+                                                        </a>
+                                                    </div>
+
+
                                                 </div>
                                             </div>
                                         </div>
