--- a/web/landing/index.html
+++ b/web/landing/index.html
@@ -286,8 +286,8 @@
                     <div class="paragraph__header row justify-content-center">
                         <div class="col-md-10 col-lg-8 text-center">
                             <h2>La plateforme</h2>
-                            <p>Le Hub Santé est une plateforme qui permet un <strong>échange sécurisé de
-                                    données</strong> au niveau de la
+                            <p>Le Hub Santé est une plateforme qui permet un <b>échange sécurisé de
+                                    données</b> au niveau de la
                                 Santé, avec l’écosystème des
                                 SAMU. Cette plateforme sert à aiguiller les informations d'un SAMU vers un autre SAMU ou
                                 d'un SAMU vers ses partenaires.
@@ -350,30 +350,30 @@
                     </div>
                     <div class="row justify-content-around mt-4">
                         <div class="mb-3 col-sm-6 col-lg-4 px-md-4">
-                            <div class="m-card bg-gray-300 rounded-md top-left-radius-0">
+                            <div class="m-card bg-gray-300 text-default rounded-md top-left-radius-0">
                                 <p><b>Automatiser</b> le partage et la <b>synchronisation d'information</b> avec un
                                     autre acteur de l'écosystème du SAMU.
                                 </p>
                             </div>
                         </div>
                         <div class="mb-3 col-sm-6 col-lg-4 px-md-4">
-                            <div class="m-card bg-gray-300 rounded-md top-left-radius-0">
+                            <div class="m-card bg-gray-300 text-default rounded-md top-left-radius-0">
                                 <p><b>Renforcer la coopération</b> entre les acteurs des urgences.</p>
                             </div>
                         </div>
                         <div class="mb-3 col-sm-6 col-lg-4 px-md-4">
-                            <div class="m-card bg-gray-300 rounded-md top-left-radius-0">
+                            <div class="m-card bg-gray-300 text-default rounded-md top-left-radius-0">
                                 <p>Gagner du temps et <b>limiter la perte d'informations</b> dans les échanges.</p>
                             </div>
                         </div>
                         <div class="mb-3 col-sm-6 col-lg-4 px-md-4">
-                            <div class="m-card bg-gray-300 rounded-md top-left-radius-0">
+                            <div class="m-card bg-gray-300 text-default rounded-md top-left-radius-0">
                                 <p><b>Éviter la multiplicité des liens</b> entre le LRM du SAMU et les autres logiciels.
                                 </p>
                             </div>
                         </div>
                         <div class="mb-3 col-sm-6 col-lg-4 px-md-4">
-                            <div class="m-card bg-gray-300 rounded-md top-left-radius-0">
+                            <div class="m-card bg-gray-300 text-default rounded-md top-left-radius-0">
                                 <p>Définir un <b>cadre d'interopérabilité</b> et un référentiel commun aux éditeurs.</p>
                             </div>
                         </div>
@@ -592,7 +592,7 @@
                     
                     <li class="footer-list__item">
                         <a href="/pages-footer/declaration_accessibilite.html">
-                            Accessibilité</a>
+                            Accessibilité : non conforme </a>
                     </li>
 
                     <li class="footer-list__item">
