--- a/web/landing/pages-footer/donnees_personnelles.html
+++ b/web/landing/pages-footer/donnees_personnelles.html
@@ -365,7 +365,7 @@
                     
                     <li class="footer-list__item">
                         <a href="/pages-footer/declaration_accessibilite.html">
-                            Accessibilité</a>
+                            Accessibilité : non conforme </a>
                     </li>
 
                     <li class="footer-list__item">
@@ -384,6 +384,5 @@
         </div>
     </div>
 </footer>
-
 
 </html>
