--- a/web/landing/pages/actualites.html
+++ b/web/landing/pages/actualites.html
@@ -253,8 +253,8 @@
 
             <!-- Bandeau gris -->
             <div class="bg-default py-2 text-white text-center mt-2 mb-2">
-                <h3>Consultez le calendrier des évènements du Hub :
-                </h3>
+                <h2>Consultez le calendrier des évènements du Hub :
+                </h2>
 
                 <div class="container" style="display: flex; justify-content: space-around;">
                     <a href="/pages/webinaires.html" class="btn btn--style1 btn--white">Prochains évènements </a>
@@ -314,7 +314,7 @@
 
                                 <article class="m-teaser m-teaser--news mb-3 col--eq-height">
                                     <a href="/articles/20230920_retour_projectathon.html"
-                                        class="bg-white border rounded-md top-left-radius-0" target="_blank">
+                                        class="bg-white border rounded-md top-left-radius-0" >
                                         <div class="m-teaser__img">
 
 
@@ -561,7 +561,7 @@
                     
                     <li class="footer-list__item">
                         <a href="/pages-footer/declaration_accessibilite.html">
-                            Accessibilité</a>
+                            Accessibilité : non conforme </a>
                     </li>
 
                     <li class="footer-list__item">
