--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -344,8 +344,8 @@
                             <div class="row align-items-center">
                                 <div class="col-md mb-3 mb-md-0">
                                     <div class="o-paragraph--text-media__content pt-3">
-                                        <h2>Projectathon éditeurs #2</h2>
-                                        <h4>13-14 novembre 2023</h4>
+                                        <h2>  Projectathon éditeurs #2  </h2>
+                                        <h3>13-14 novembre 2023</h3>
                                         <div class="wysiwyg mb-3">
                                             <p>
                                                 Après un premier Projectathon réussi à la rentrée de septembre, un
@@ -389,7 +389,7 @@
                                     <div class="o-paragraph--text-media__media rounded-md top-left-radius-0">
                                         <div class="o-paragraph--text-media__clip">
                                             <a href="https://youtu.be/D-rHdJLDEbs" target="_blank">
-                                                <img src="/img/crea/Illustrations webinaires/Projectathon editeurs 1.png"
+                                                <img src="/img/crea/illustrations_webinaires/Projectathon editeurs 1.png"
                                                      alt="" width="585"
                                                      height="329" loading="lazy">
                                             </a>
@@ -413,7 +413,7 @@
                                 <div class="col-md mb-3 mb-md-0">
                                     <div class="o-paragraph--text-media__content pt-3">
                                         <h2>Projectathon éditeurs #1</h2>
-                                        <h4>18-19 septembre 2023</h4>
+                                        <h3>18-19 septembre 2023</h3>
                                         <div class="wysiwyg mb-3">
                                             <p>
                                                 Afin de relancer les travaux du Hub Santé au retour de l'été, un
@@ -454,7 +454,7 @@
                                     <div class="o-paragraph--text-media__media rounded-md top-left-radius-0">
                                         <div class="o-paragraph--text-media__clip">
                                             <a href="https://youtu.be/a23luh3as8Y" target="_blank">
-                                                <img src="/img/crea/Illustrations webinaires/Projectathon editeurs 1.png"
+                                                <img src="/img/crea/illustrations_webinaires/Projectathon editeurs 1.png"
                                                      alt="" width="585"
                                                      height="329" loading="lazy">
                                             </a>
@@ -478,7 +478,7 @@
                                 <div class="col-md mb-3 mb-md-0">
                                     <div class="o-paragraph--text-media__content pt-3">
                                         <h2>Kick-off métier des pilotes</h2>
-                                        <h4>Jeudi 14 septembre 2023</h4>
+                                        <h3>Jeudi 14 septembre 2023</h3>
                                         <div class="wysiwyg mb-3">
                                             <p>Une première réunion de lancement du Hub Santé avec les SAMU pilotes
                                                 et leurs ARS.
@@ -511,7 +511,7 @@
                                         <div class="o-paragraph--text-media__clip">
                                             <a href="https://youtu.be/8ZDP7WGdXcg" target="_blank">
 
-                                                <img src="/img/crea/Illustrations webinaires/Illust. kick off metier des pilotes.png"
+                                                <img src="/img/crea/illustrations_webinaires/Illust. kick off metier des pilotes.png"
                                                      alt="" width="585"
                                                      height="329" loading="lazy">
                                             </a>
@@ -536,7 +536,7 @@
                                 <div class="col-md mb-3 mb-md-0">
                                     <div class="o-paragraph--text-media__content pt-3">
                                         <h2>Démonstration #1</h2>
-                                        <h4>Lundi 5 juin 2023 </h4>
+                                        <h3>Lundi 5 juin 2023 </h3>
                                         <div class="wysiwyg mb-3">
                                             <p>Principalement orientée pour les équipes internes du programme
                                                 SI-SAMU ainsi que nos partenaires métiers et ARS, cette première
@@ -565,7 +565,7 @@
                                     <div class="o-paragraph--text-media__media rounded-md top-left-radius-0">
                                         <div class="o-paragraph--text-media__clip">
                                             <a href="https://youtu.be/8Z4PShefKYg" target="_blank">
-                                                <img src="/img/crea/Illustrations webinaires/Image webinaire 1 finale.png"
+                                                <img src="/img/crea/illustrations_webinaires/Image webinaire 1 finale.png"
                                                      alt="" width="585"
                                                      height="329" loading="lazy">
                                             </a>
@@ -602,20 +602,20 @@
                     <div class="logos">
                         <div class="logo logo--0">
                             <a href="https://solidarites-sante.gouv.fr"
-                               title="Ministère de la Santé et de la Prévention (nouvelle fenêtre)" target="_blank"
-                               rel="nofollow">
+                                title="Ministère de la Santé et de la Prévention (nouvelle fenêtre)" target="_blank"
+                                rel="nofollow">
 
                                 <img src="/img/logo-ministere.svg" alt="Ministère de la Santé et de la Prévention"
-                                     width="133" height="77" loading="lazy">
+                                    width="133" height="77" loading="lazy">
 
                             </a>
                         </div>
                         <div class="logo logo--1">
                             <a href="https://esante.gouv.fr/" title="Agence du Numérique en Santé (nouvelle fenêtre)"
-                               target="_blank" rel="nofollow">
+                                target="_blank" rel="nofollow">
 
                                 <img src="/img/logo-ANS-footer.svg" alt="Agence du Numérique en Santé" width="106"
-                                     height="74" loading="lazy">
+                                    height="74" loading="lazy">
 
                             </a>
                         </div>
@@ -642,7 +642,7 @@
                             </li>
                             <li class="m-social__item">
                                 <a class="m-social__link" href="https://twitter.com/esante_gouv_fr" target="_blank"
-                                   rel="nofollow">
+                                    rel="nofollow">
                                     <div class="m-social__icon">
                                         <svg class="svg-icon svg-twitter" aria-hidden="true" focusable="false">
                                             <use xlink:href="/svg-icons/icon-sprite.svg#twitter"></use>
@@ -653,8 +653,8 @@
                             </li>
                             <li class="m-social__item">
                                 <a class="m-social__link"
-                                   href="https://www.youtube.com/channel/UCd1zuSaU5cE1lRCpwv_HSMA" target="_blank"
-                                   rel="nofollow">
+                                    href="https://www.youtube.com/channel/UCd1zuSaU5cE1lRCpwv_HSMA" target="_blank"
+                                    rel="nofollow">
                                     <div class="m-social__icon">
                                         <svg class="svg-icon svg-youtube" aria-hidden="true" focusable="false">
                                             <use xlink:href="/svg-icons/icon-sprite.svg#youtube"></use>
@@ -665,7 +665,7 @@
                             </li>
                             <li class="m-social__item">
                                 <a class="m-social__link" href="https://esante.gouv.fr/rss.xml" target="_blank"
-                                   rel="nofollow">
+                                    rel="nofollow">
                                     <div class="m-social__icon">
                                         <svg class="svg-icon svg-rss" aria-hidden="true" focusable="false">
                                             <use xlink:href="/svg-icons/icon-sprite.svg#rss"></use>
@@ -687,22 +687,19 @@
                             <a href="/pages/15-18.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
-                                </svg>
-                                Documentation</a>
+                                </svg>Documentation</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
                             <a href="/pages/webinaires.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
-                                </svg>
-                                Webinaires</a>
+                                </svg>Webinaires</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
                             <a href="/pages/contacts.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
-                                </svg>
-                                Contactez-nous</a>
+                                </svg>Contactez-nous</a>
                         </li>
                     </ul>
                 </div>
@@ -733,17 +730,18 @@
 
                     <li class="footer-list__item">
                         <a href="/pages-footer/declaration_accessibilite.html">
-                            Accessibilité</a>
+                            Accessibilité : non conforme </a>
                     </li>
 
                     <li class="footer-list__item">
                         <a href="/pages-footer/donnees_personnelles.html">
                             Politique de protection des données personnelles </a>
-                    </li>
+                      </li>
 
-                    <li class="footer-list__item">
+                      <li class="footer-list__item">
                         <a href="/pages-footer/plan_de_site.html">Plan de site </a>
-                    </li>
+                      </li>
+
 
 
                 </ul>
