--- a/web/landing/pages-footer/mentions_legales.html
+++ b/web/landing/pages-footer/mentions_legales.html
@@ -385,7 +385,7 @@
                     
                     <li class="footer-list__item">
                         <a href="/pages-footer/declaration_accessibilite.html">
-                            Accessibilité</a>
+                            Accessibilité : non conforme </a>
                     </li>
 
                     <li class="footer-list__item">
@@ -404,7 +404,6 @@
         </div>
     </div>
 </footer>
-
 
 
 
