--- a/web/landing/pages/contacts.html
+++ b/web/landing/pages/contacts.html
@@ -454,7 +454,7 @@
                     
                     <li class="footer-list__item">
                         <a href="/pages-footer/declaration_accessibilite.html">
-                            Accessibilité</a>
+                            Accessibilité : non conforme </a>
                     </li>
 
                     <li class="footer-list__item">
