--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -340,11 +340,70 @@
             <div class="container">
                 <div class="o-paragraph--text-media__slider">
                     <div class="o-paragraph--text-media__item">
+                        <div class="o-paragraph--text-media rightVisual">
+                            <div class="row align-items-center">
+                                <div class="col-md mb-3 mb-md-0">
+                                    <div class="o-paragraph--text-media__content pt-3">
+                                        <h2>Webinaire Point d'Information</h2>
+                                        <h3>4 décembre 2023</h3>
+                                        <div class="wysiwyg mb-3">
+                                            <p>
+                                                Ouvert à une audience large, ce webinaire de Point d'Information sur le
+                                                Hub Santé représente le contexte et les enjeux du projet avant de faire
+                                                un focus sur les périmètres priorisés sur 2023.
+                                            </p>
+                                            <p>
+                                                Pour les trois périmètres (technique, 15-NexSIS et 15-15), une
+                                                présentation des travaux menés est faite avant de présenter les
+                                                prochains jalons.
+                                            </p>
+                                        </div>
+
+                                        <div class="paragraph--lien">
+                                            <div class="row align-items-center">
+                                                <div class="col-md mb-3">
+                                                    <a href="https://youtu.be/lBWAmDzfokc"
+                                                       class="btn btn--style1 btn--white" target="_blank">Visionner
+                                                    </a>
+                                                </div>
+                                                <div class="col-md mb-3">
+                                                    <a href="/resources/23.12.04 - Hub Sante - Webinaire Point Information.pdf"
+                                                       class="btn btn--style1 btn--white" target="_blank">Slides (pdf -
+                                                        4.3Mo)
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md o-paragraph--text-media__media_column">
+                                    <div class="o-paragraph--text-media__media rounded-md top-left-radius-0">
+                                        <div class="o-paragraph--text-media__clip">
+                                            <a href="https://youtu.be/lBWAmDzfokc" target="_blank">
+                                                <img src="/img/crea/illustrations_webinaires/Image webinaire 1 finale.png"
+                                                     alt="" width="585"
+                                                     height="329" loading="lazy">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="paragraph-space o-paragraph--text-media__wrapper">
+            <div class="container">
+                <div class="o-paragraph--text-media__slider">
+                    <div class="o-paragraph--text-media__item">
                         <div class="o-paragraph--text-media leftVisual">
                             <div class="row align-items-center">
                                 <div class="col-md mb-3 mb-md-0">
                                     <div class="o-paragraph--text-media__content pt-3">
-                                        <h2>  Projectathon éditeurs #2  </h2>
+                                        <h2> Projectathon éditeurs #2 </h2>
                                         <h3>13-14 novembre 2023</h3>
                                         <div class="wysiwyg mb-3">
                                             <p>
@@ -602,20 +661,20 @@
                     <div class="logos">
                         <div class="logo logo--0">
                             <a href="https://solidarites-sante.gouv.fr"
-                                title="Ministère de la Santé et de la Prévention (nouvelle fenêtre)" target="_blank"
-                                rel="nofollow">
+                               title="Ministère de la Santé et de la Prévention (nouvelle fenêtre)" target="_blank"
+                               rel="nofollow">
 
                                 <img src="/img/logo-ministere.svg" alt="Ministère de la Santé et de la Prévention"
-                                    width="133" height="77" loading="lazy">
+                                     width="133" height="77" loading="lazy">
 
                             </a>
                         </div>
                         <div class="logo logo--1">
                             <a href="https://esante.gouv.fr/" title="Agence du Numérique en Santé (nouvelle fenêtre)"
-                                target="_blank" rel="nofollow">
+                               target="_blank" rel="nofollow">
 
                                 <img src="/img/logo-ANS-footer.svg" alt="Agence du Numérique en Santé" width="106"
-                                    height="74" loading="lazy">
+                                     height="74" loading="lazy">
 
                             </a>
                         </div>
@@ -642,7 +701,7 @@
                             </li>
                             <li class="m-social__item">
                                 <a class="m-social__link" href="https://twitter.com/esante_gouv_fr" target="_blank"
-                                    rel="nofollow">
+                                   rel="nofollow">
                                     <div class="m-social__icon">
                                         <svg class="svg-icon svg-twitter" aria-hidden="true" focusable="false">
                                             <use xlink:href="/svg-icons/icon-sprite.svg#twitter"></use>
@@ -653,8 +712,8 @@
                             </li>
                             <li class="m-social__item">
                                 <a class="m-social__link"
-                                    href="https://www.youtube.com/channel/UCd1zuSaU5cE1lRCpwv_HSMA" target="_blank"
-                                    rel="nofollow">
+                                   href="https://www.youtube.com/channel/UCd1zuSaU5cE1lRCpwv_HSMA" target="_blank"
+                                   rel="nofollow">
                                     <div class="m-social__icon">
                                         <svg class="svg-icon svg-youtube" aria-hidden="true" focusable="false">
                                             <use xlink:href="/svg-icons/icon-sprite.svg#youtube"></use>
@@ -665,7 +724,7 @@
                             </li>
                             <li class="m-social__item">
                                 <a class="m-social__link" href="https://esante.gouv.fr/rss.xml" target="_blank"
-                                    rel="nofollow">
+                                   rel="nofollow">
                                     <div class="m-social__icon">
                                         <svg class="svg-icon svg-rss" aria-hidden="true" focusable="false">
                                             <use xlink:href="/svg-icons/icon-sprite.svg#rss"></use>
@@ -687,19 +746,22 @@
                             <a href="/pages/15-18.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
-                                </svg>Documentation</a>
+                                </svg>
+                                Documentation</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
                             <a href="/pages/webinaires.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
-                                </svg>Webinaires</a>
+                                </svg>
+                                Webinaires</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
                             <a href="/pages/contacts.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
-                                </svg>Contactez-nous</a>
+                                </svg>
+                                Contactez-nous</a>
                         </li>
                     </ul>
                 </div>
@@ -736,12 +798,11 @@
                     <li class="footer-list__item">
                         <a href="/pages-footer/donnees_personnelles.html">
                             Politique de protection des données personnelles </a>
-                      </li>
+                    </li>
 
-                      <li class="footer-list__item">
+                    <li class="footer-list__item">
                         <a href="/pages-footer/plan_de_site.html">Plan de site </a>
-                      </li>
-
+                    </li>
 
 
                 </ul>
