Ajout d'ID sur les sections du webinaires

--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -336,7 +336,7 @@
         </div>
 
         <!-- Webinaires en replay -->
-        <div class="paragraph-space o-paragraph--text-media__wrapper">
+        <div class="paragraph-space o-paragraph--text-media__wrapper" id="webinaire1">
             <div class="container">
                 <div class="o-paragraph--text-media__slider">
                     <div class="o-paragraph--text-media__item">
@@ -344,7 +344,7 @@
                             <div class="row align-items-center">
                                 <div class="col-md mb-3 mb-md-0">
                                     <div class="o-paragraph--text-media__content pt-3">
-                                        <h2>Webinaire Point d'Information</h2>
+                                        <h2>Webinaire Point d'Information #1</h2>
                                         <h3>4 décembre 2023</h3>
                                         <div class="wysiwyg mb-3">
                                             <p>
@@ -395,7 +395,7 @@
 
             </div>
         </div>
-        <div class="paragraph-space o-paragraph--text-media__wrapper">
+        <div class="paragraph-space o-paragraph--text-media__wrapper" id="projectathon2">
             <div class="container">
                 <div class="o-paragraph--text-media__slider">
                     <div class="o-paragraph--text-media__item">
@@ -463,7 +463,7 @@
 
             </div>
         </div>
-        <div class="paragraph-space o-paragraph--text-media__wrapper">
+        <div class="paragraph-space o-paragraph--text-media__wrapper" id="projectathon1">
             <div class="container">
                 <div class="o-paragraph--text-media__slider">
                     <div class="o-paragraph--text-media__item">
@@ -528,7 +528,7 @@
 
             </div>
         </div>
-        <div class="paragraph-space o-paragraph--text-media__wrapper">
+        <div class="paragraph-space o-paragraph--text-media__wrapper" id="kickoff_metier">
             <div class="container">
                 <div class="o-paragraph--text-media__slider">
                     <div class="o-paragraph--text-media__item">
@@ -586,7 +586,7 @@
 
             </div>
         </div>
-        <div class="paragraph-space o-paragraph--text-media__wrapper">
+        <div class="paragraph-space o-paragraph--text-media__wrapper" id="demo">
             <div class="container">
                 <div class="o-paragraph--text-media__slider">
                     <div class="o-paragraph--text-media__item">
@@ -594,7 +594,7 @@
                             <div class="row align-items-center">
                                 <div class="col-md mb-3 mb-md-0">
                                     <div class="o-paragraph--text-media__content pt-3">
-                                        <h2>Démonstration #1</h2>
+                                        <h2>Démonstration</h2>
                                         <h3>Lundi 5 juin 2023 </h3>
                                         <div class="wysiwyg mb-3">
                                             <p>Principalement orientée pour les équipes internes du programme
